--- a/asset/css/menu.scss
+++ b/asset/css/menu.scss
@@ -1,168 +1,91 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
-body{
-  background:#4E347F;
-  color:#FFF;
-  margin:0;
-  font-family: 'Raleway', sans-serif;
-  text-align:center;
-  letter-spacing:0.08em;
+@import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:700';
+
+$font:'Source Sans Pro', sans-serif;
+$primary: #51bc2e;
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
-b{
-  font-size:28px;
-  color:#FFF;
 
+
+html, body{
+  height:100%;
+  width: 100%;
 }
-.container{
-  width:80%;
-  height:500px;
-  background:#fff;
-  margin:10px auto;
-  text-align:center;
-  padding:0 12px 12px 12px;
-  overflow:hidden;
-  box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-  border-top:12px solid white;
 
-  .picture{
-    position:relative;
-    top:0;
-    width:100%;
-    height:445px;
-    background:url('https://s-media-cache-ak0.pinimg.com/originals/24/8d/f5/248df520ef2048d0614c73f90b9de4ab.jpg');
-    background-color:#CBB618;
-    background-size:cover;
-    transition:all 0.5s ease;
-    animation: pictureDown 0.7s;
-    animation-fill-mode: forwards;
-  }
-  .picture_up{
-    animation: pictureUp 0.7s;
-    animation-fill-mode: forwards;
-  }
+.flex {
+  min-height: 50vh;
+  display:flex;
+  align-items:flex-end;
+  justify-content:center;
+}
 
-  .options{
-    position:relative;
-    bottom:110px;
-    width:300px;
-    height:37px;
-    display:none;
-    opacity:0;
-    padding: 15px 0 0 0;
-    user-select:none;
-    font-size:24px;
+a.bttn {
+  color:$primary;
+  text-decoration:none;
+  -webkit-transition:0.3s all ease;
+  transition:0.3s ease all;
+  &:hover {
     color:#FFF;
-    text-align:left;
-
-    i{
-      padding-left:52px;
-    }
   }
-  .options_show{
-    animation: optionsDisplay 0.7s;
-    animation-fill-mode: forwards;
-    opacity:1;
+  &:focus {
+    color:#FFF;
   }
+}
 
-  .navigation{
-    width:100%;
-    height:55px;
-    position:relative;
+.bttn {
+  font-size:18px;
+  letter-spacing:2px;
+  text-transform:uppercase;
+  display:inline-block;
+  text-align:center;
+  width:270px;
+  font-weight:bold;
+  padding:14px 0px;
+  border:3px solid $primary;
+  border-radius:2px;
+  position:relative;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.1);
+  &:before {
+    -webkit-transition:0.5s all ease;
+    transition:0.5s all ease;
+    position:absolute;
+    top:0;
+    left:50%;
+    right:50%;
     bottom:0;
-    color:#4E347F;
-    text-align:left;
-    font-size:24px;
-
-    .plus{
-      position:absolute;
-      top:50%;
-      left:50%;
-      width:34px;
-      height:34px;
-      transform:translate(-50%,-50%);
-      cursor:pointer;
-
-      .plusHor{
-        position:absolute;
-        left:50%;
-        top:50%;
-        transform:translate(-50%,-50%);
-        width:24px;
-        height:2px;
-        background:#4E347F;
-      }
-
-      .plusVer{
-        position:absolute;
-        left:50%;
-        top:50%;
-        transform:translate(-50%,-50%);
-        width:2px;
-        height:24px;
-        background:#4E347F;
-        animation: deactivation 0.7s;
-        animation-fill-mode: forwards;
-      }
-      .plusVer_active{
-        animation: activation 0.7s;
-        animation-fill-mode: forwards;
-        width:300px; height:55px; top:-38px;
-      }
-
+    opacity:0;
+    content:'';
+    background-color:$primary;
+    z-index:-2;
+  }
+  &:hover {
+    &:before {
+      -webkit-transition:0.5s all ease;
+      transition:0.5s all ease;
+      left:0;
+      right:0;
+      opacity:1;
+    }
+  }
+  &:focus {
+    &:before {
+      transition:0.5s all ease;
+      left:0;
+      right:0;
+      opacity:1;
     }
   }
 }
 
-.nav_btns{
-
-  padding-top:17px;
-  padding-left:17px;
-  animation: navShow 0.7s;
-  animation-fill-mode: forwards;
-
-  .nav_btn{
-    margin-left:32px;
-  }
-  .nav_btn_r{
-    margin-left:83px;
-  }
-}
-.nav_btns_hide{
-  animation: navHide 0.7s;
-  animation-fill-mode: forwards;
+.modal.modal-fixed-footer {
+  height: 55%;
 }
 
-@keyframes activation{
-  0%{width:2px; height:34px; top:50%;}
-  50%{width:2px; height:55px; top:-38px;}
-  100%{width:100vh; height:55px; top:-38px;}
-}
-@keyframes deactivation{
-  0%{width:300px; height:55px; top:-38px;}
-  50%{width:2px; height:55px; top:-38px;}
-  100%{width:2px; height:24px; top:50%;}
-}
-@keyframes pictureUp{
-  0%{top:0;}
-  50%{top:-65px;}
-  100%{top:-65px;}
-}
-@keyframes pictureDown{
-  0%{top:-65px;}
-  50%{top:-65px;}
-  100%{top:0;}
-}
-@keyframes optionsDisplay{
-  0%{opacity:0;}
-  50%{opacity:0;}
-  100%{opacity:1;}
-}
-@keyframes navShow{
-  0%{opacity:0;}
-  50%{opacity:0;}
-  100%{opacity:1;}
-}
-@keyframes navHide{
-  0%{opacity:1;}
-  50%{opacity:0;}
-  100%{opacity:0;}
+.modal .modal-footer{
+  height: 18%;
 }
