--- a/asset/css/menu.scss
+++ b/asset/css/menu.scss
@@ -38,14 +38,14 @@ a.bttn {
 }
 
 .bttn {
-  font-size:18px;
+  font-size:15px;
   letter-spacing:2px;
   text-transform:uppercase;
   display:inline-block;
   text-align:center;
-  width:270px;
+  width:200px;
   font-weight:bold;
-  padding:14px 0px;
+  padding:8px 0px;
   border:3px solid $primary;
   border-radius:2px;
   position:relative;
@@ -88,4 +88,8 @@ a.bttn {
 
 .modal .modal-footer{
   height: 18%;
+}
+
+.nav-wrapper{
+  color: #2c2c2c;
 }
