--- a/asset/css/maTable.css
+++ b/asset/css/maTable.css
@@ -1,6 +1,11 @@
-body{
+#bodyForm{
 
+ }
+
+#bodyForm:not(div) {
+    background-color: #f6fffb;
 }
+
 .wrapper{
     margin-left: auto;
     margin-right: auto;
@@ -17,6 +22,12 @@ body{
     height: 80vh;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 2px 2px 12px #aaa;
+
+}
+
+.titleForm{
+    text-align: center;
 }
 
 #register{
